--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CS_Project1</title>
+  <title>My Website - Homepage</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
