--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script>
-      window.location.replace(./home.html);
+      window.location.replace("https://foodiepig.github.io/cssite/home");
     </script>
   </head>
 </html>
