--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   <body>
                   <p>Here are some things that I like:</p>
     <div>
- <a href=https://en.wikipedia.org/wiki/Windows_XP>
+ <a href=https://foodiepig.github.io/cssite/xp>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Unofficial_fan_made_Windows_XP_logo_variant.svg/1200px-Unofficial_fan_made_Windows_XP_logo_variant.svg.png">
     </div>
       <br> <br>
