--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     </div>
       <br> <br>
       <div>
-        <a href=https://en.wikipedia.org/wiki/Pringles>
+        <a href=https://foodiepig.github.io/cssite/pringles>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f6/Pringles_2021.svg/1200px-Pringles_2021.svg.png">
     </div>
         <br> <br>
