--- a/pringles.html
+++ b/pringles.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CS_Project3</title>
+  <title>My Website - Pringles</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
