--- a/home.html
+++ b/home.html
@@ -25,12 +25,12 @@
     </div>
         <br> <br>
         <div>
-          <a href=https://en.wikipedia.org/wiki/De_Havilland_Canada_Dash_8>
+          <a href=https://foodiepig.github.io/cssite/wip>
             <img src="https://www.aerotime.aero/upload/files/flybe_de_havilland_canada_dhc_dash_8_q400_turboprop_at_southampton_airport_sou.jpg">
             </div>
           <br> <br>
         <div>
-          <a href=https://en.wikipedia.org/wiki/Ryanair>
+          <a href==https://foodiepig.github.io/cssite/wip>
             <img src="https://e3.365dm.com/22/08/1600x900/skynews-ryanair-stansted_5866429.jpg?20220816141707">
             </div>
   </body>
