--- a/wip.html
+++ b/wip.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CS_Project4</title>
+  <title>My Website - Work in Progress</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
