--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             </div>
           <br> <br>
         <div>
-          <a href==https://foodiepig.github.io/cssite/wip>
+          <a href=https://foodiepig.github.io/cssite/wip>
             <img src="https://e3.365dm.com/22/08/1600x900/skynews-ryanair-stansted_5866429.jpg?20220816141707">
             </div>
   </body>
