--- a/xp.html
+++ b/xp.html
@@ -16,7 +16,7 @@
    <p>Windows XP is a major release of Microsoft's Windows NT operating system. It was released to manufacturing on August 24, 2001, and later to retail on October 25, 2001. It is a direct upgrade to its predecessors, Windows 2000 for high-end and business users and Windows Me for home users, available for any devices running Windows NT 4.0, Windows 98, Windows 2000 and Windows Me that meet the new Windows XP system requirements.</p>
    <br> <br>
    
-   <p>This is by far, my favourite operating system. Yes, better than 10 and 11.</p>
+   <p>This is by far, my favourite operating system. 100% better than 10 and 11.</p>
    
    <br> <br>
    
