--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                   <p>Here are some things that I like:</p>
     <div>
  <a href=https://foodiepig.github.io/cssite/xp>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Unofficial_fan_made_Windows_XP_logo_variant.svg/1200px-Unofficial_fan_made_Windows_XP_logo_variant.svg.png">
+    <img src="./img/xp.png">
     </div>
       <br> <br>
       <div>
