--- a/home.html
+++ b/home.html
@@ -21,17 +21,17 @@
       <br> <br>
       <div>
         <a href=https://foodiepig.github.io/cssite/pringles>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f6/Pringles_2021.svg/1200px-Pringles_2021.svg.png">
+    <img src="./img/pringles.png">
     </div>
         <br> <br>
         <div>
           <a href=https://foodiepig.github.io/cssite/wip>
-            <img src="https://www.aerotime.aero/upload/files/flybe_de_havilland_canada_dhc_dash_8_q400_turboprop_at_southampton_airport_sou.jpg">
+            <img src="./img/q400.png">
             </div>
           <br> <br>
         <div>
           <a href=https://foodiepig.github.io/cssite/wip>
-            <img src="https://e3.365dm.com/22/08/1600x900/skynews-ryanair-stansted_5866429.jpg?20220816141707">
+            <img src="./img/ryanair.png">
             </div>
   </body>
 </html>
