--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 <script>
 window.location.replace("https://foodiepig.github.io/cssite/home");
 </script>
