--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     </div>
         <br> <br>
         <div>
-          <a href=https://foodiepig.github.io/cssite/wip>
+          <a href=https://foodiepig.github.io/cssite/q400>
             <img src="./img/q400.png">
             </div>
           <br> <br>
