--- a/q400.html
+++ b/q400.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CS_Project5</title>
+  <title>My Website - Q400</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -22,7 +22,7 @@
    
       <div>
  <a href=https://en.wikipedia.org/wiki/De_Havilland_Canada_Dash_8>
-    <img src="./q400.png">
+    <img src="./img/q400.png">
     </div>
 <!-- partial -->
   
