--- a/q400.html
+++ b/q400.html
@@ -22,7 +22,7 @@
    
       <div>
  <a href=https://en.wikipedia.org/wiki/De_Havilland_Canada_Dash_8>
-    <img src="./img/q400.png">
+    <img src="./img/wikipedia.png">
     </div>
 <!-- partial -->
   
