--- a/xp.html
+++ b/xp.html
@@ -23,7 +23,7 @@
    
       <div>
  <a href=https://en.wikipedia.org/wiki/Windows_XP>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/80/Wikipedia-logo-v2.svg/1200px-Wikipedia-logo-v2.svg.png">
+    <img src="./img/wikipedia.png">
     </div>
 <!-- partial -->
   
