--- a/ryanair.html
+++ b/ryanair.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CS_Project6</title>
+  <title>My Website - Ryanair</title>
+      <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./style.css">
 
 </head>
