--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             </div>
           <br> <br>
         <div>
-          <a href=https://foodiepig.github.io/cssite/wip>
+          <a href=https://foodiepig.github.io/cssite/ryanair>
             <img src="./img/ryanair.png">
             </div>
   </body>
