--- a/pringles.html
+++ b/pringles.html
@@ -25,6 +25,8 @@
  <a href=https://en.wikipedia.org/wiki/Pringles>
     <img src="./img/wikipedia.png">
     </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <marquee behavior="alternate">./img/pringles.png height=15px width=15px</marquee>
 <!-- partial -->
   
 </body>
