--- a/pringles.html
+++ b/pringles.html
@@ -26,7 +26,7 @@
     <img src="./img/wikipedia.png">
     </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <marquee behavior="alternate">./img/pringles.png height=15px width=15px</marquee>
+        <marquee behavior="alternate"><img src=./img/pringles.png height=15px width=15px></marquee>
 <!-- partial -->
   
 </body>
