--- a/pringles.html
+++ b/pringles.html
@@ -25,6 +25,13 @@
  <a href=https://en.wikipedia.org/wiki/Pringles>
     <img src="./img/wikipedia.png">
     </div>
+        
+        <style>
+          img {
+              width: 5%;
+               height: 5%;
+        </style>
+        
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <marquee behavior="alternate"><img src=./img/pringles.png height=15px width=15px></marquee>
 <!-- partial -->
