--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   <body>
                   <p>Here are some things that I like:</p>
     <div>
- <a href=https://foodiepig.github.io/cssite/xp>
+ <a href=./xp>
     <img src="./img/xp.png">
     </div>
       <br> <br>
