--- a/home.html
+++ b/home.html
@@ -21,17 +21,17 @@
     </div>
       <br> <br>
       <div>
-        <a href=https://foodiepig.github.io/cssite/pringles>
+        <a href=./pringles>
     <img src="./img/pringles.png">
     </div>
         <br> <br>
         <div>
-          <a href=https://foodiepig.github.io/cssite/q400>
+          <a href=./q400>
             <img src="./img/q400.png">
             </div>
           <br> <br>
         <div>
-          <a href=https://foodiepig.github.io/cssite/ryanair>
+          <a href=./ryanair>
             <img src="./img/ryanair.png">
             </div>
   </body>
